k8s/1_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: localhost:5000/blog:latest
        imagePullPolicy: Always
        command: ["npm"]
        args:
          - start
