k8s/2_service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog
spec:
  ports:
  - name: blog
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: blog
  sessionAffinity: None
  type: ClusterIP
